--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -24,20 +24,12 @@
   <br />
   <textarea id="editor1" rows="5" cols="100"></textarea>
   <br />
-	<h2>Visualizer:</h2>
-	<ul data-bind="foreach: factions">
-		<li>
-			<div>
-				<span data-bind="text: faction"> </span> has <span data-bind='text: assets().length'>&nbsp;</span> assets:
-				<a href='#' data-bind='click: addAsset '>Add asset</a>
-			</div>
-			<ul data-bind="foreach: assets">
-				<li>
-					<span data-bind="text: $data"> </span>
-				</li>
-			</ul>
-		</li>
-	</ul>
+	<h2>Visualizer from perspective of <span data-bind="text: perspective"> </span>:</h2>
+		<ul data-bind="foreach: assets">
+			<li>
+				<span data-bind="text: faction"></span><span data-bind="text: value"> </span><span data-bind="text: name"> </span>
+			</li>
+		</ul>
   <br />
   <textarea id="visualizer" rows="10" cols="100" style="display:none;"></textarea>
   <br />
@@ -60,16 +52,7 @@
      * @param model {gapi.drive.realtime.Model} the Realtime root model object.
      */
     function initializeModel(model) {
-		var turn = {
-			"faction": "Rakdos",
-			"assets": [
-				{"faction":"Rakdos", "name":"Avatar of Discord", "value":2},
-				{"faction":"Golgari", "name":"Gleancrawler", "value":2},
-				{"faction":"Gruul", "name":"Giant Solifuge", "value":2}
-			]
-		};
-
-      var string = model.createString(JSON.stringify(turn));
+      var string = model.createString(JSON.stringify(viewModel.getInstance()));
       model.getRoot().set('text', string);
     }
 
@@ -90,7 +73,8 @@
       // Keeping one box updated with a custom EventListener.
       var textArea2 = document.getElementById('editor2');
       var updateTextArea2 = function(e) {
-        textArea2.value = extractAssets(string);
+        //textArea2.value = extractAssets(string);
+		textArea2.value = string;
       };
       string.addEventListener(gapi.drive.realtime.EventType.TEXT_INSERTED, updateTextArea2);
       string.addEventListener(gapi.drive.realtime.EventType.TEXT_DELETED, updateTextArea2);
@@ -100,13 +84,15 @@
       var visualizer = document.getElementById('visualizer');
       var updateVisualizer = function(e) {
 		// update visualizer with data from string
-        visualizer.value = mapFromJsonToVisualizer(string);
+        //visualizer.value = mapFromJsonToVisualizer(string);
+		visualizer.value = string;
       };
       string.addEventListener(gapi.drive.realtime.EventType.TEXT_INSERTED, updateVisualizer);
       string.addEventListener(gapi.drive.realtime.EventType.TEXT_DELETED, updateVisualizer);
       visualizer.onkeyup = function() {
 		// update string with data from visualizer
-        string.setText(mapFromVisualizerToJson(visualizer.value, string));
+        //string.setText(mapFromVisualizerToJson(visualizer.value, string));
+		string.setText(visualizer.value);
       };
       updateVisualizer();
 
@@ -129,7 +115,7 @@
       };
       model.addEventListener(gapi.drive.realtime.EventType.UNDO_REDO_STATE_CHANGED, onUndoRedoStateChanged);
 	  
-	  ko.applyBindings(viewModel);
+	  ko.applyBindings(viewModel.getInstance());
     }
 
     /**
@@ -166,7 +152,7 @@
        * specific MIME type will be used:
        *     application/vnd.google-apps.drive-sdk.
        */
-      newFileMimeType: 'application/json',
+      newFileMimeType: null,
 
       /**
        * Function to be called every time a Realtime file is loaded.
@@ -195,23 +181,37 @@
   </script>
   <script>
 	// Define a "Person" class that tracks its own name and children, and has a method to add a new child
-	var TurnModel = function(faction, assets) {
-		this.faction = faction;
-		this.assets = ko.observableArray(assets);
-	 
-		this.addAsset = function() {
-			this.assets.push("New asset");
-		}.bind(this);
+	var TurnModel = function(perspective, assets) {
+		this.perspective = perspective;
+		//this.assets = ko.observableArray(assets);
+		this.assets = assets;
 	}
 	 
 	// The view model is an abstract description of the state of the UI, but without any knowledge of the UI technology (HTML)
-	var viewModel = {
-		factions: [
-			new TurnModel("Annabelle", ["Arnie", "Anders", "Apple"]),
-			new TurnModel("Bertie", ["Boutros-Boutros", "Brianna", "Barbie", "Bee-bop"]),
-			new TurnModel("Charles", ["Cayenne", "Cleopatra"])
-			]
-	};  
+	var viewModel = (function () {
+
+		var instance;
+
+		function createInstance() {
+			var object = new TurnModel(
+				"Rakdos",
+				[{"faction":"Rakdos","name":"Avatar of Discord","value":2},
+				{"faction":"Golgari","name":"Gleancrawler","value":2},
+				{"faction":"Gruul","name":"Giant Solifuge","value":2}]
+			);
+			return object;
+		}
+
+		return {
+			getInstance: function () {
+				if (!instance) {
+					instance = createInstance();
+				}
+
+				return instance;
+			}
+		};
+	})();
   </script>
 </body>
 </html>
