--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="FactionRPG : FactionRPG">
+    <meta name="description" content="FactionRPG : Rules for my diceless, political, player-versus-player, RPG.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/darrinkatz/FactionRPG">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/darrinkatz/factionrpg">View on GitHub</a>
 
           <h1 id="project_title">FactionRPG</h1>
-          <h2 id="project_tagline">FactionRPG</h2>
+          <h2 id="project_tagline">Rules for my diceless, political, player-versus-player, RPG.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/darrinkatz/FactionRPG/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/darrinkatz/FactionRPG/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/darrinkatz/factionrpg/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/darrinkatz/factionrpg/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
