--- a/effect_calculator/index.html
+++ b/effect_calculator/index.html
@@ -11,25 +11,31 @@
 	<body>
 		<div>
 			<p>
-				<span>Effect:</span>
-				<select id="effect" class="param">
-					<option value="damage">Damage</option>
-					<option value="charm">Charm</option>
-					<option value="sleep">Sleep</option>
-					<option value="paralyze">Paralyze</option>
-					<option value="weaken">Weaken</option>																		
+				<span>Check:</span>
+				<select id="check" class="param">
+					<option value="attack">Attack Roll</option>
+					<option value="skill">Skill Check</option>
+					<option value="damage">Resist Damage</option>
+					<option value="charm">Resist Charm</option>
+					<option value="sleep">Resist Sleep</option>
+					<option value="paralyze">Resist Paralyze</option>
+					<option value="weaken">Resist Weaken</option>																		
 				</select>
 			</p>
 			<p>
 				<span>Difficulty:</span>
-				<input id="difficulty" class="param" type="number" value="15" />
+				<input id="difficulty" class="param" type="number" value="20" />
 			</p>
 			<p>
-				<span>Resistance:</span>
-				<input id="resistance" class="param" type="number" value="15" />
+				<span>Result:</span>
+				<input id="result" class="param" type="number" value="20" />
+			</p>
+			<p>
+				<span id="span_outcome">Outcome:</span>
+				<div id="outcome" />
 			</p>
 		</div>
-		<div id="result" />
+		<!-- script tags -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<script src="scripts.js"></script>
 	</body>
