--- a/effect_calculator/index.html
+++ b/effect_calculator/index.html
@@ -22,7 +22,7 @@
 							<option value="skill">Skill</option>
 							<option value="damage">Damage</option>
 							<option value="charm">Charm</option>
-							<option value="drain">Drain</option>
+							<option value="exhaust">Exhaust</option>
 							<option value="petrify">Petrify</option>
 							<option value="weaken">Weaken</option>																		
 						</select>						
