--- a/effect_calculator/index.html
+++ b/effect_calculator/index.html
@@ -30,7 +30,9 @@
 				</tr>
 				<tr>
 					<td>
-						Difficulty:
+						<div id="diff_label">
+							Difficulty:
+						</div>
 					</td>
 				</tr>
 				<tr>					
@@ -42,7 +44,9 @@
 				</tr>
 				<tr>
 					<td>
-						Result:
+						<div id="result_label">
+							Result:
+						</div>
 					</td>
 				</tr>
 				<tr>					
