--- a/effect_calculator/index.html
+++ b/effect_calculator/index.html
@@ -8,6 +8,48 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
+		<div id="mmx5e">
+			<span>
+				M&amp;Mx5e Result Calculator
+			</span>
+			<table>
+				<tr>
+					<td>
+						<span>Check</span>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input id="mmx5e_check_down" type="button" value="-" />
+						<input id="mmx5e_check" class="param" type="text" value="10" disabled />
+						<input id="mmx5e_check_up" type="button" value="+" />
+					</td>						
+				</tr>					
+				<tr>
+					<td>
+						<span>DC</span>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input id="mmx5e_dc_down" type="button" value="-" />
+						<input id="mmx5e_dc" class="param" type="text" value="10" disabled />
+						<input id="mmx5e_dc_up" type="button" value="+" />
+					</td>						
+				</tr>					
+				<tr>
+					<td>
+						<span>Degrees of Success:</span>
+					</td>
+				</tr>
+				<tr>					
+					<td>
+						<div id="mmx5e_dos" />
+					</td>					
+				</tr>
+			</table>
+		</div>
+		<hr />
 		<div id="academy_man">
 			<span>
 				Academy Man Calculator
